--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     {
       "css": ["main.css"],
       "js": ["content.js"],
-      "matches": ["<all_urls>"]
+      "matches": ["<all_urls>"],
+      "run_at": "document_end"
     }
   ],
   "browser_action": {
