--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,7 @@
     {
       "css": ["main.css"],
       "js": ["content.js"],
-      "matches": ["<all_urls>"],
-      "run_at": "document_end"
+      "matches": ["<all_urls>"]
     }
   ],
   "background": {
