--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "findandreplacedomtext": "^0.4.6",
     "fs": "0.0.1-security",
     "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "tippy": "0.0.0",
     "tippy.js": "^3.4.1",
     "unfluff": "^3.2.0"
