--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,10 @@
 {
-    "extends": "airbnb",
+    
+    "extends": [
+        "airbnb",
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ],
     "rules": {
         "react/jsx-filename-extension": [
             1,
@@ -54,5 +59,6 @@
         "window": false,
         "render": false,
         "chrome": false
-    }
+    },
+    "parser": "babel-eslint"
 }
