--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-    
+
     "extends": [
         "airbnb",
         "eslint:recommended",
@@ -43,6 +43,9 @@
             "off"
         ],
         "no-alert": [
+            "off"
+        ],
+        "react/destructuring-assignment": [
             "off"
         ]
     },
