--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/josiahcoad/SeeTheWorld#readme",
   "dependencies": {
+    "@material-ui/core": "^3.9.0",
     "findandreplacedomtext": "^0.4.6",
     "fs": "0.0.1-security",
     "google-maps-react": "^2.0.2",
+    "jquery": "^3.3.1",
     "tippy": "0.0.0",
     "tippy.js": "^3.4.1",
     "unfluff": "^3.2.0",
