--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "findandreplacedomtext": "^0.4.6",
     "fs": "0.0.1-security",
     "google-maps-react": "^2.0.2",
-    "jquery": "^3.3.1",
+    "react-bootstrap": "^0.32.4",
     "tippy": "0.0.0",
     "tippy.js": "^3.4.1",
     "unfluff": "^3.2.0",
