Added image and html loaders into webpack. Changed distribution directory structure and manifest.json

--- a/package.json
+++ b/package.json
@@ -42,9 +42,13 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.3",
+    "extract-loader": "^3.1.0",
+    "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.28.4",
     "webpack-chrome-extension-reloader": "^1.1.1",
     "webpack-cli": "^3.2.1"
