--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "extract-loader": "^3.1.0",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
+    "native-toast": "^2.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "request": "^2.88.0",
