popups working on (seamingly) any page now... ohhh yeah

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs": "0.0.1-security",
     "google-maps-react": "^2.0.2",
     "react-bootstrap": "^0.32.4",
+    "react-popover": "^0.5.10",
     "react-spinners": "^0.5.1",
     "unfluff": "^3.2.0",
     "uuid": "^3.3.2"
