--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "wanderland",
   "version": "1.0.0",
-  "description": "I love planning travel and seeing new places to go in the world :earth_africa:. There is a recurrent problem with internet wanderlust though. :grimacing: Right now I'm planning a trip to India and googling queries such as *\"best hill stations in the himalayas\"* or *\"best national parks in central india\"*. I get back results like **\"7 Best National Parks in Central India\"**. Normally, it is a list of places that I have never heard of before and have literally no point of reference for the place. :hear_no_evil: So what do I do when I see a name like **Bandhavgarh National Park**? Open up another tab, copy/paste the name into google maps. And I have to do that for *every place* that sounds interesting :expressionless:. And then I start forgetting places or maybe I write them down somewhere but a little while later forget why I wrote it down, and now lost the website that I first found it on. :man_facepalming: With *Wanderland* you can track places that interest you across web pages. You can add places of interest to your saved places by just clicking on the name of the place when it appears on the site. The idea is that you can easily see a short blurb about any place you added at any time, take notes and see pictures all within your workflow looking through a web page like the **\"7 Best National Parks in Central India\"**! :sunglasses:",
+  "description": "An app made by travellers for travellers. See maps of places mentioned on webpages.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development --devtool source-map",
-    "watch": "webpack --mode development --devtool source-map --watch --info-verbosity verbose"
+    "watch": "webpack --mode development --devtool source-map --watch --info-verbosity verbose",
+    "prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
